--- a/奇人轶事惊人言语.html
+++ b/奇人轶事惊人言语.html
@@ -23,7 +23,7 @@
 <meta name="author" content="林峰" />
 
 
-<meta name="date" content="2022-05-17" />
+<meta name="date" content="2022-05-21" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -130,24 +130,32 @@
 <li class="chapter" data-level="" data-path="宋仁宗.html"><a href="宋仁宗.html#宋人轶事汇编卷二"><i class="fa fa-check"></i>《宋人轶事汇编·卷二》</a></li>
 </ul></li>
 </ul></li>
+<li class="chapter" data-level="" data-path="宋官员.html"><a href="宋官员.html"><i class="fa fa-check"></i>宋官员</a><ul>
+<li class="chapter" data-level="" data-path="吕夷简.html"><a href="吕夷简.html"><i class="fa fa-check"></i>吕夷简</a><ul>
+<li class="chapter" data-level="" data-path="吕夷简.html"><a href="吕夷简.html#宋人轶事汇编卷九"><i class="fa fa-check"></i>《宋人轶事汇编·卷九》</a></li>
+</ul></li>
+<li class="chapter" data-level="" data-path="韩琦.html"><a href="韩琦.html"><i class="fa fa-check"></i>韩琦</a><ul>
+<li class="chapter" data-level="" data-path="韩琦.html"><a href="韩琦.html#宋人轶事汇编卷十"><i class="fa fa-check"></i>《宋人轶事汇编·卷十》</a></li>
+</ul></li>
+</ul></li>
 <li class="chapter" data-level="" data-path="宋女性.html"><a href="宋女性.html"><i class="fa fa-check"></i>宋女性</a><ul>
-<li class="chapter" data-level="" data-path="刘后.html"><a href="刘后.html"><i class="fa fa-check"></i>刘后</a><ul>
-<li class="chapter" data-level="" data-path="刘后.html"><a href="刘后.html#宋人轶事汇编卷一"><i class="fa fa-check"></i>《宋人轶事汇编·卷一》</a></li>
+<li class="chapter" data-level="" data-path="刘后宋真宗.html"><a href="刘后宋真宗.html"><i class="fa fa-check"></i>刘后（宋真宗）</a><ul>
+<li class="chapter" data-level="" data-path="刘后宋真宗.html"><a href="刘后宋真宗.html#宋人轶事汇编卷一"><i class="fa fa-check"></i>《宋人轶事汇编·卷一》</a></li>
 </ul></li>
-<li class="chapter" data-level="" data-path="杨淑妃.html"><a href="杨淑妃.html"><i class="fa fa-check"></i>杨淑妃</a><ul>
-<li class="chapter" data-level="" data-path="杨淑妃.html"><a href="杨淑妃.html#宋人轶事汇编卷一-1"><i class="fa fa-check"></i>《宋人轶事汇编·卷一》</a></li>
+<li class="chapter" data-level="" data-path="杨淑妃宋真宗.html"><a href="杨淑妃宋真宗.html"><i class="fa fa-check"></i>杨淑妃（宋真宗）</a><ul>
+<li class="chapter" data-level="" data-path="杨淑妃宋真宗.html"><a href="杨淑妃宋真宗.html#宋人轶事汇编卷一-1"><i class="fa fa-check"></i>《宋人轶事汇编·卷一》</a></li>
 </ul></li>
-<li class="chapter" data-level="" data-path="李宸妃.html"><a href="李宸妃.html"><i class="fa fa-check"></i>李宸妃</a><ul>
-<li class="chapter" data-level="" data-path="李宸妃.html"><a href="李宸妃.html#宋人轶事汇编卷一-2"><i class="fa fa-check"></i>《宋人轶事汇编·卷一》</a></li>
+<li class="chapter" data-level="" data-path="李宸妃宋真宗.html"><a href="李宸妃宋真宗.html"><i class="fa fa-check"></i>李宸妃（宋真宗）</a><ul>
+<li class="chapter" data-level="" data-path="李宸妃宋真宗.html"><a href="李宸妃宋真宗.html#宋人轶事汇编卷一-2"><i class="fa fa-check"></i>《宋人轶事汇编·卷一》</a></li>
 </ul></li>
-<li class="chapter" data-level="" data-path="郭后.html"><a href="郭后.html"><i class="fa fa-check"></i>郭后</a><ul>
-<li class="chapter" data-level="" data-path="郭后.html"><a href="郭后.html#宋人轶事汇编卷二-1"><i class="fa fa-check"></i>《宋人轶事汇编·卷二》</a></li>
+<li class="chapter" data-level="" data-path="郭后宋仁宗.html"><a href="郭后宋仁宗.html"><i class="fa fa-check"></i>郭后（宋仁宗）</a><ul>
+<li class="chapter" data-level="" data-path="郭后宋仁宗.html"><a href="郭后宋仁宗.html#宋人轶事汇编卷二-1"><i class="fa fa-check"></i>《宋人轶事汇编·卷二》</a></li>
 </ul></li>
-<li class="chapter" data-level="" data-path="曹后.html"><a href="曹后.html"><i class="fa fa-check"></i>曹后</a><ul>
-<li class="chapter" data-level="" data-path="曹后.html"><a href="曹后.html#宋人轶事汇编卷二-2"><i class="fa fa-check"></i>《宋人轶事汇编·卷二》</a></li>
+<li class="chapter" data-level="" data-path="曹后宋仁宗.html"><a href="曹后宋仁宗.html"><i class="fa fa-check"></i>曹后（宋仁宗）</a><ul>
+<li class="chapter" data-level="" data-path="曹后宋仁宗.html"><a href="曹后宋仁宗.html#宋人轶事汇编卷二-2"><i class="fa fa-check"></i>《宋人轶事汇编·卷二》</a></li>
 </ul></li>
-<li class="chapter" data-level="" data-path="张贵妃.html"><a href="张贵妃.html"><i class="fa fa-check"></i>张贵妃</a><ul>
-<li class="chapter" data-level="" data-path="张贵妃.html"><a href="张贵妃.html#宋人轶事汇编卷二-3"><i class="fa fa-check"></i>《宋人轶事汇编·卷二》</a></li>
+<li class="chapter" data-level="" data-path="张贵妃宋仁宗.html"><a href="张贵妃宋仁宗.html"><i class="fa fa-check"></i>张贵妃（宋仁宗）</a><ul>
+<li class="chapter" data-level="" data-path="张贵妃宋仁宗.html"><a href="张贵妃宋仁宗.html#宋人轶事汇编卷二-3"><i class="fa fa-check"></i>《宋人轶事汇编·卷二》</a></li>
 </ul></li>
 </ul></li>
 <li class="appendix"><span><b>附录</b></span></li>
@@ -176,8 +184,13 @@
 <h2>奇人轶事，惊人言语<a href="奇人轶事惊人言语.html#奇人轶事惊人言语" class="anchor-section" aria-label="Anchor link to header"></a></h2>
 <ul>
 <li>曹丕曾经在圣旨里给大臣说，可以作威作福，死人活人。见 <a href="蒋济.html#曹丕诏夏侯尚">《三国志·蒋济传》</a>。</li>
-<li>宋仁宗身世由杨淑妃告知。见<a href="李宸妃.html#杨淑妃语仁宗">《宋汇编》</a></li>
-<li>宋仁宗生母好手段和仁宗人称赤脚仙人。见<a href="李宸妃.html#李宸妃上位">《宋汇编》</a></li>
+<li>宋仁宗身世由两人告知
+<ul>
+<li>杨淑妃。见<a href="李宸妃宋真宗.html#杨淑妃语仁宗">《宋汇编》</a>。</li>
+<li>或燕王。见<a href="吕夷简.html#吕夷简-宋人轶事-15">《宋汇编》</a>。</li>
+</ul></li>
+<li>宋仁宗生母好手段。仁宗人称赤脚仙人。见<a href="李宸妃宋真宗.html#李宸妃上位">《宋汇编》</a></li>
+<li>宋仁宗喜好双飞。见<a href="宋仁宗.html#宋仁宗-宋人轶事-19">《宋汇编》</a></li>
 </ul>
 
 </div>
