--- a/references.html
+++ b/references.html
@@ -23,14 +23,14 @@
 <meta name="author" content="林峰" />
 
 
-<meta name="date" content="2022-05-17" />
+<meta name="date" content="2022-05-21" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
   
   
-<link rel="prev" href="张贵妃.html"/>
+<link rel="prev" href="张贵妃宋仁宗.html"/>
 
 <script src="libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/fuse.js@6.4.6/dist/fuse.min.js"></script>
@@ -130,24 +130,32 @@
 <li class="chapter" data-level="" data-path="宋仁宗.html"><a href="宋仁宗.html#宋人轶事汇编卷二"><i class="fa fa-check"></i>《宋人轶事汇编·卷二》</a></li>
 </ul></li>
 </ul></li>
+<li class="chapter" data-level="" data-path="宋官员.html"><a href="宋官员.html"><i class="fa fa-check"></i>宋官员</a><ul>
+<li class="chapter" data-level="" data-path="吕夷简.html"><a href="吕夷简.html"><i class="fa fa-check"></i>吕夷简</a><ul>
+<li class="chapter" data-level="" data-path="吕夷简.html"><a href="吕夷简.html#宋人轶事汇编卷九"><i class="fa fa-check"></i>《宋人轶事汇编·卷九》</a></li>
+</ul></li>
+<li class="chapter" data-level="" data-path="韩琦.html"><a href="韩琦.html"><i class="fa fa-check"></i>韩琦</a><ul>
+<li class="chapter" data-level="" data-path="韩琦.html"><a href="韩琦.html#宋人轶事汇编卷十"><i class="fa fa-check"></i>《宋人轶事汇编·卷十》</a></li>
+</ul></li>
+</ul></li>
 <li class="chapter" data-level="" data-path="宋女性.html"><a href="宋女性.html"><i class="fa fa-check"></i>宋女性</a><ul>
-<li class="chapter" data-level="" data-path="刘后.html"><a href="刘后.html"><i class="fa fa-check"></i>刘后</a><ul>
-<li class="chapter" data-level="" data-path="刘后.html"><a href="刘后.html#宋人轶事汇编卷一"><i class="fa fa-check"></i>《宋人轶事汇编·卷一》</a></li>
+<li class="chapter" data-level="" data-path="刘后宋真宗.html"><a href="刘后宋真宗.html"><i class="fa fa-check"></i>刘后（宋真宗）</a><ul>
+<li class="chapter" data-level="" data-path="刘后宋真宗.html"><a href="刘后宋真宗.html#宋人轶事汇编卷一"><i class="fa fa-check"></i>《宋人轶事汇编·卷一》</a></li>
 </ul></li>
-<li class="chapter" data-level="" data-path="杨淑妃.html"><a href="杨淑妃.html"><i class="fa fa-check"></i>杨淑妃</a><ul>
-<li class="chapter" data-level="" data-path="杨淑妃.html"><a href="杨淑妃.html#宋人轶事汇编卷一-1"><i class="fa fa-check"></i>《宋人轶事汇编·卷一》</a></li>
+<li class="chapter" data-level="" data-path="杨淑妃宋真宗.html"><a href="杨淑妃宋真宗.html"><i class="fa fa-check"></i>杨淑妃（宋真宗）</a><ul>
+<li class="chapter" data-level="" data-path="杨淑妃宋真宗.html"><a href="杨淑妃宋真宗.html#宋人轶事汇编卷一-1"><i class="fa fa-check"></i>《宋人轶事汇编·卷一》</a></li>
 </ul></li>
-<li class="chapter" data-level="" data-path="李宸妃.html"><a href="李宸妃.html"><i class="fa fa-check"></i>李宸妃</a><ul>
-<li class="chapter" data-level="" data-path="李宸妃.html"><a href="李宸妃.html#宋人轶事汇编卷一-2"><i class="fa fa-check"></i>《宋人轶事汇编·卷一》</a></li>
+<li class="chapter" data-level="" data-path="李宸妃宋真宗.html"><a href="李宸妃宋真宗.html"><i class="fa fa-check"></i>李宸妃（宋真宗）</a><ul>
+<li class="chapter" data-level="" data-path="李宸妃宋真宗.html"><a href="李宸妃宋真宗.html#宋人轶事汇编卷一-2"><i class="fa fa-check"></i>《宋人轶事汇编·卷一》</a></li>
 </ul></li>
-<li class="chapter" data-level="" data-path="郭后.html"><a href="郭后.html"><i class="fa fa-check"></i>郭后</a><ul>
-<li class="chapter" data-level="" data-path="郭后.html"><a href="郭后.html#宋人轶事汇编卷二-1"><i class="fa fa-check"></i>《宋人轶事汇编·卷二》</a></li>
+<li class="chapter" data-level="" data-path="郭后宋仁宗.html"><a href="郭后宋仁宗.html"><i class="fa fa-check"></i>郭后（宋仁宗）</a><ul>
+<li class="chapter" data-level="" data-path="郭后宋仁宗.html"><a href="郭后宋仁宗.html#宋人轶事汇编卷二-1"><i class="fa fa-check"></i>《宋人轶事汇编·卷二》</a></li>
 </ul></li>
-<li class="chapter" data-level="" data-path="曹后.html"><a href="曹后.html"><i class="fa fa-check"></i>曹后</a><ul>
-<li class="chapter" data-level="" data-path="曹后.html"><a href="曹后.html#宋人轶事汇编卷二-2"><i class="fa fa-check"></i>《宋人轶事汇编·卷二》</a></li>
+<li class="chapter" data-level="" data-path="曹后宋仁宗.html"><a href="曹后宋仁宗.html"><i class="fa fa-check"></i>曹后（宋仁宗）</a><ul>
+<li class="chapter" data-level="" data-path="曹后宋仁宗.html"><a href="曹后宋仁宗.html#宋人轶事汇编卷二-2"><i class="fa fa-check"></i>《宋人轶事汇编·卷二》</a></li>
 </ul></li>
-<li class="chapter" data-level="" data-path="张贵妃.html"><a href="张贵妃.html"><i class="fa fa-check"></i>张贵妃</a><ul>
-<li class="chapter" data-level="" data-path="张贵妃.html"><a href="张贵妃.html#宋人轶事汇编卷二-3"><i class="fa fa-check"></i>《宋人轶事汇编·卷二》</a></li>
+<li class="chapter" data-level="" data-path="张贵妃宋仁宗.html"><a href="张贵妃宋仁宗.html"><i class="fa fa-check"></i>张贵妃（宋仁宗）</a><ul>
+<li class="chapter" data-level="" data-path="张贵妃宋仁宗.html"><a href="张贵妃宋仁宗.html#宋人轶事汇编卷二-3"><i class="fa fa-check"></i>《宋人轶事汇编·卷二》</a></li>
 </ul></li>
 </ul></li>
 <li class="appendix"><span><b>附录</b></span></li>
@@ -293,12 +301,33 @@
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
             </section>
 
           </div>
         </div>
       </div>
-<a href="张贵妃.html" class="navigation navigation-prev navigation-unique" aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
+<a href="张贵妃宋仁宗.html" class="navigation navigation-prev navigation-unique" aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
 
     </div>
   </div>
