githubhy published a site update

--- a/曹后宋仁宗.html
+++ b/曹后宋仁宗.html
@@ -185,8 +185,10 @@
 <div id="宋人轶事汇编卷二-2" class="section level3 hasAnchor">
 <h3>《宋人轶事汇编·卷二》<a href="曹后宋仁宗.html#宋人轶事汇编卷二-2" class="anchor-section" aria-label="Anchor link to header"></a></h3>
 <ol style="list-style-type: decimal">
-<li><p>[]{#-宋人轶事-1} 天圣中，童谣云：‘曹门好，有好好；曹门高，有高高。’其后，今太皇太后为皇后，太皇太后姓曹氏。英宗皇帝即位，而高太后为皇后。高后，曹氏之所出。《东斋记事》卷一。</p></li>
-<li><p>[]{#-宋人轶事-2} 天圣、明道间，京师盛歌一曲曰《曹门高》。未几，慈圣太后受册中宫，人以为验矣。其后宣仁与慈圣皆垂箔摄政，而宣仁实慈圣之甥，以故选配英庙，则征兆之意若曰：‘曹门之高，当相继而起也。’《老学庵笔记》卷七。</p></li>
+<li>[]{#-宋人轶事-1} 天圣<a href="#fn109" class="footnote-ref" id="fnref109"><sup>109</sup></a>中，童谣云：‘曹门好，有好好；曹门高，有高高。’其后，今太皇太后为皇后，太皇太后姓曹氏。英宗皇帝即位，而 <em>高太后</em> 为皇后。高后，曹氏之所出。《东斋记事》卷一。</li>
+</ol>
+<ol start="2" style="list-style-type: decimal">
+<li><p>[]{#-宋人轶事-2} 天圣、明道<a href="#fn110" class="footnote-ref" id="fnref110"><sup>110</sup></a>间，<span style="color: red; font-size: 80%"> [峰按] 即仁宗统治期间</span> 京师盛歌一曲曰《曹门高》。未几，慈圣太后 <span style="color: magenta; font-size: 80%">曹后</span> 受册 <span style="color: magenta; font-size: 80%">接受册命</span> 中宫，人以为验矣。其后宣仁 <span style="color: magenta; font-size: 80%">即<a href="https://zh.wikipedia.org/wiki/%E5%AE%A3%E4%BB%81%E5%9C%A3%E7%83%88%E7%9A%87%E5%90%8E">宋英宗皇后</a></span> 与慈圣皆垂箔 <span style="color: magenta; font-size: 80%">犹垂帘</span> 摄政，而宣仁实慈圣之甥，以故选配英庙，则征兆之意若曰：‘曹门之高，当相继而起也。’《老学庵笔记》卷七。</p></li>
 <li><p>[]{#-宋人轶事-3} 慈圣太后在女家时，尝因寒食与家人戏掷钱。一钱盘旋久之，遂侧立不仆，未几被选。《石林燕语》卷七。《避暑漫钞》。</p></li>
 <li><p>[]{#-宋人轶事-4} 京兆李植，字化光，观察使士衡之孙。自少年好道，不乐婚宦。初，为侍禁，约婚慈圣。既娶，迎入门，见鬼神千万在其前。植惊走，逾墙避之。后时即还父母家，俄选为后焉。《默记》卷中。《甲申杂记》。《玉芝堂谈荟》卷一。</p></li>
 <li><p>[]{#-宋人轶事-5} 庆历中，亲事官乘醉入禁中，仁宗皇帝遣谕：‘皇后贵妃闭阁勿出。’后谨听命，贵妃直趋上前。明日，上对辅臣泣下，辅臣亦泣，首相陈恭公毅然无改容。上谓：‘贵妃冒不测而来，斯可宠也。’枢相乘间启废立之议。张文定得其说，即诣恭公，以为不可。恭公持议甚坚。久而上复问之，梁相适进曰：‘一之已甚，其可再乎？’声甚厉。既退，上留适曰：‘朕止欲稍加妃礼，本无他意，卿可安心。’群论遂止。《闻见近录》。《道山清话》。</p></li>
@@ -212,6 +214,13 @@
 <li><p>[]{#-宋人轶事-25} 慈圣曹太后工飞白，盖习观昭陵落笔也。先人旧藏一‘美’字，径二尺许，笔势飞动，用慈寿宫宝。今不知何在矣。《老学庵笔记》卷二。</p></li>
 </ol>
 </div>
+</div>
+<div class="footnotes">
+<hr />
+<ol start="109">
+<li id="fn109"><p>天圣（1023年－1032年十一月）是宋仁宗赵祯的第一个年号，北宋使用该年号共计10年<a href="曹后宋仁宗.html#fnref109" class="footnote-back">↩︎</a></p></li>
+<li id="fn110"><p>明道是中国北宋仁宗时期使用的年号。1032-1033。<a href="曹后宋仁宗.html#fnref110" class="footnote-back">↩︎</a></p></li>
+</ol>
 </div>
             </section>
 
